# symbolic-move

./: Cargo.toml  README.md
examples/: demo.md  demo.move
src/: bytecode.rs  constraint.rs  context.rs  dynamic.rs  evaluation.rs  lib.rs  main.rs  note.md  state.rs  symbolic_tree.rs  traits.rs  ty.rs  value.rs
src/state/: global.rs  local.rs  termination.rs
symbolic_evaluation/: Cargo.toml
symbolic_evaluation/src/: evaluation.rs  lib.rs  traits.rs
