[package]
name = "symbolic-move"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
move-stackless-bytecode = { git = "https://github.com/diem/move" }
symbolic-evaluation = { path = "symbolic_evaluation" }
z3 = {version="0.11.2", features = ["static-link-z3"]}
